--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,9 +5,17 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - release
+      - develop
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+env:
+  REPO_ACCESS_NAME : ${{ secrets.REPO_ACCESS_NAME}}
+  REPO_ACCESS_TOKEN : ${{ secrets.REPO_ACCESS_TOKEN}} # scope all repos
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # scope this repo
 
 jobs:
   build:
@@ -16,9 +24,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 11
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Set the env value
+      id: step_one
+      run: |
+        echo "REPO_ACCESS_NAME=$REPO_ACCESS_NAME" >> $GITHUB_ENV
+        echo "REPO_ACCESS_TOKEN=$REPO_ACCESS_TOKEN" >> $GITHUB_ENV
+    - name: echo the env value
+      id: step_two
+      run: |
+        echo "REPO_ACCESS_NAME is ${{ env.REPO_ACCESS_NAME }}"
+        echo "REPO_ACCESS_TOKEN is ${{ env.REPO_ACCESS_TOKEN }}"
