--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,13 @@
             <url>https://maven.pkg.github.com/manishg2015/address-service</url>
         </repository>
     </distributionManagement>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/manishg2015/parent-pom</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+    </repositories>
 
 </project>
