--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -61,7 +61,7 @@ jobs:
           # Container registry server url
           login-server: myjavaacr.azurecr.io
 
-      - name: Build and push Docker images
+      - name: Master Branch Build and push Docker images
         if: success() && github.ref == 'refs/heads/master'
         uses: docker/build-push-action@v2.3.0
         with:
@@ -69,9 +69,9 @@ jobs:
           context: .
           tags: myjavaacr.azurecr.io/address-service:${{ github.run_id }}
           cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
-      - name: Build and push Docker images
+      - name: Non Master Branch Build and push Docker images
         if: success() && github.ref != 'refs/heads/master'
         uses: docker/build-push-action@v2.3.0
         with:
@@ -84,7 +84,7 @@ jobs:
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
 
 
 
