--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,6 +51,14 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v1.1.1
 
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Azure Container Registry Login
         uses: Azure/docker-login@v1
         with:
@@ -68,8 +76,8 @@ jobs:
           push: true
           context: .
           tags: myjavaacr.azurecr.io/address-service:${{ github.run_id }}
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
       - name: Non Master Branch Build and push Docker images
         if: success() && github.ref != 'refs/heads/master'
@@ -78,12 +86,13 @@ jobs:
           push: true
           context: .
           tags: myjavaacr.azurecr.io/address-service-dev:${{ github.run_id}}
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-#      - name: Move cache
-#        run: |
-#          rm -rf /tmp/.buildx-cache
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
 
 
