--- a/aks/dev/ingress.yaml
+++ b/aks/dev/ingress.yaml
@@ -1,11 +1,11 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name:  __deploymentName__
-  namespace: __namespace__
+  name:  address-service-dev
+  namespace: myjava-dev
 
   labels:
-    website: __deploymentName__
+    website: address-service-dev
   annotations:
     ## rate limiting params
     kubernetes.io/ingress.class: "nginx"
@@ -28,7 +28,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: __deploymentName__
+              serviceName: address-service-dev
               servicePort: 8080
 #  tls:
 #    - hosts:
