--- a/aks/dev/service.yaml
+++ b/aks/dev/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: __deploymentName__
-  namespace: __namespace__
+  name: address-service-dev
+  namespace: myjava-dev
   labels:
-    app: __deploymentName__
+    app: address-service-dev
   
 spec:
   type: ClusterIP
   selector:
-    app: __deploymentName__
+    app: address-service-dev
   ports:
     - name: app
       port: 8080           
