--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Build and Publish
 
 on:
   push:
@@ -22,8 +22,7 @@ env:
   #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # scope this repo
 
 jobs:
-  build:
-
+  build_and_publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -88,5 +87,7 @@ jobs:
 
 
 
+  deploy_to_aks:
+    runs-on: ubuntu-latest
 
 
