--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -87,7 +87,7 @@
 
         - uses: Azure/login@v1
           with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+            creds: ${{ secrets.AZURE_CREDENTIALS }} # Client Id of SP to access the Azure Vault
 
         - uses: Azure/get-keyvault-secrets@v1
           with:
