--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,14 +6,14 @@ name: Build and Publish
 on:
   push:
     branches:
-      - master
+      #- master
       - 'releases/**'
       - develop
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
-      - master
+     # - master
     paths-ignore:
       - '**.md'
 env:
