--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,6 +19,9 @@ on:
     branches: [ master ]
 #   schedule:
 #     - cron: '45 19 * * 5'
+env:
+  GITHUB_USERNAME : ${{ secrets.REPO_ACCESS_NAME}}
+  GITHUB_TOKEN : ${{ secrets.REPO_ACCESS_TOKEN}} # scope all repos
 
 jobs:
   analyze:
@@ -36,6 +39,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+
+    - name: Set the env value
+      id: step_one
+      run: |
+        echo "GITHUB_USERNAME=$GITHUB_USERNAME" >> $GITHUB_ENV
+        echo "GITHUB_TOKEN=$GITHUB_TOKEN" >> $GITHUB_ENV
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -49,10 +62,14 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+#    - name: Autobuild
+#      uses: github/codeql-action/autobuild@v1
+    - name: Build with Maven
+      if: success()
+      run: mvn -B package --file pom.xml
 
-    # ℹ️ Command-line programs to run using the OS shell.
+
+      # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
 
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
